update strategy